--- a/Servidor HTTP/mascota/views/layout.ejs
+++ b/Servidor HTTP/mascota/views/layout.ejs
@@ -29,12 +29,14 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/estilos.css">
     <!--STYLES END-->
   </head>
 
   <body>
+   <h1>Hola</h1>
     <%- body %>
+    <h1>Adios</h1>
 
 
 
@@ -89,6 +91,7 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/App/app.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
