Uso de paramatros por sails

--- a/Servidor HTTP/mascota/views/layout.ejs
+++ b/Servidor HTTP/mascota/views/layout.ejs
@@ -35,6 +35,12 @@
 
   <body>
    <h1>Hola</h1>
+   <ul>
+       <li><a href="/Quito">Quito</a></li>
+       <li><a href="/Guayaquil">Guayaquil</a></li>
+       <li><a href="/Cuenca">Cuenca</a></li>
+       <li><a href="/">Home</a></li>
+   </ul>
     <%- body %>
     <h1>Adios</h1>
 
@@ -62,7 +68,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+    <script type="text/javascript" src="/jst.js"></script>
     <!--TEMPLATES END-->
 
 
