--- a/Servidor HTTP/mascota/views/layout.ejs
+++ b/Servidor HTTP/mascota/views/layout.ejs
@@ -30,6 +30,8 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/estilos.css">
+    <link rel="stylesheet" href="/styles/estilos2.css">
+    <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
   </head>
 
@@ -68,7 +70,7 @@
     -->
 
     <!--TEMPLATES-->
-    <script type="text/javascript" src="/jst.js"></script>
+    
     <!--TEMPLATES END-->
 
 
@@ -97,7 +99,6 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
-    <script src="/App/app.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
