--- a/ProyectoAngular/src/app/app.component.html
+++ b/ProyectoAngular/src/app/app.component.html
@@ -1,18 +1,44 @@
 <h1>{{title}}</h1>
-
+<h2>{{error}}</h2>
 <div class="container">
-  <form (ngSubmit)="crearTienda(NuevaTiendaForm)" #NuevaTiendaForm="ngForm">
-    <div class="form-group">
-      <label>Tienda</label>
-      <input type="text" class="form-control" placeholder="Nombre de la tienda: Adidas" name="nombre"
-             [(ngModel)]="nuevaTienda.nombre">
+  <div class="row">
+    <div class="col-sm-12">
+      <pre>
+        {{nuevaTienda|json}}
+      </pre>
     </div>
-    <button type="submit" class="btn btn-block btn-success">Crear</button>
-  </form>
+    <div class="col-sm-6">
+      <form class="animated bounceIn" (ngSubmit)="crearTienda(NuevaTiendaForm)" #NuevaTiendaForm="ngForm">
+        <div class="form-group">
+          <label>Tienda</label>
+          <span *ngIf="nombre.errors &&(nombre.dirty||nombre.touched)">Ingrese un nombre minimo con 4 caracteres</span>
+          <input required minlength="4" type="text" class="form-control" placeholder="Nombre de la tienda: Adidas"
+                 name="nombre"
+                 [(ngModel)]="nuevaTienda.nombre" #nombre="ngModel" #nombreElm>
+        </div>
+        <button [disabled]="disabledButtons.NuevaTiendaFormSubmitButton||!NuevaTiendaForm.valid" type="submit"
+                class="btn btn-block btn-success">Crear
+        </button>
+      </form>
+    </div>
+    <div class="col-sm-6">
+      <h1>{{nuevaTienda.nombre}}</h1>
+    </div>
+  </div>
+
+
 </div>
-
-<p>{{nombre}} - {{apellido}}</p>
-<h3 [innerHTML]="nombreCompleto()" (click)="hizoClick()" (mouseenter)="hizoFocus()" [style.backgroundColor]="colorH3"
-    [style.fontsize]="tamanoH3"></h3>
 <br>
-
+<div class="container">
+  <div class="col-sm-3" *ngFor="let tienda of tiendas">
+    <h3>{{tienda.nombre}}</h3>
+    <p>ID: {{tienda.id}}</p>
+    <button class="btn btn-block btn-danger" (click)="borrarTienda(tienda.id)">Borrar</button>
+  </div>
+</div>
+<br>
+<div class="container">
+  <pre>
+    {{tiendas|json}}
+  </pre>
+</div>
